--- a/pages/pcf/product-manager.html
+++ b/pages/pcf/product-manager.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Product manager
-description: text
+description: Find out what a product manager does and the skills you need to do the job.
 permalink: /careers/career-pathways/product-manager/
 hero_content: Find out what a product manager does and the skills you need to do the job.
 preload: hero-join-us.svg
@@ -22,12 +22,12 @@ preload: hero-join-us.svg
             <li class="current">
               <a class="nav-link" href="#" aria-current="location">Introduction</a>
             </li>
-            <li><a class="nav-link" href="#">Associate product manager</a></li>
-            <li><a class="nav-link" href="#">Junior product manager</a></li>
-            <li><a class="nav-link" href="#">Product manager</a></li>
-            <li><a class="nav-link" href="#">Senior product manager</a></li>
-            <li><a class="nav-link" href="#">Staff product manager</a></li>
-            <li><a class="nav-link" href="#">Principal product manager</a></li>
+            <li><a class="nav-link" href="#associate-product-manager">Associate product manager</a></li>
+            <li><a class="nav-link" href="#junior-product-manager">Junior product manager</a></li>
+            <li><a class="nav-link" href="#product-manager">Product manager</a></li>
+            <li><a class="nav-link" href="#senior-product-manager">Senior product manager</a></li>
+            <li><a class="nav-link" href="#staff-product-manager">Staff product manager</a></li>
+            <li><a class="nav-link" href="#principal-product-manager">Principal product manager</a></li>
           </ul>
         </nav>
       </div>
