--- a/pages/join.html
+++ b/pages/join.html
@@ -162,9 +162,8 @@ preload: hero-join-us.svg
             {% include icons/join/time-off.svg %}
             <h3>Time off</h3>
             <p>
-              We offer a minimum of 29 days paid time off, which covers any type of leave
-              (such as holiday, sick, vacation, and extra parental leave) that you need or
-              want to take.
+              We offer 31 paid days off per year: 15 vacation days, 11 federal holidays, 
+              and 5 floating holidays. Sick time is unlimited.
             </p>
           </div>
 
