--- a/pages/join.html
+++ b/pages/join.html
@@ -163,7 +163,7 @@ preload: hero-join-us.svg
             <h3>Time off</h3>
             <p>
               We offer 31 paid days off per year: 15 vacation days, 11 federal holidays, 
-              and 5 floating holidays. Sick time is unlimited.
+              and 5 floating holidays. We also offer a flexible sick leave policy.
             </p>
           </div>
 
