--- a/pages/join.html
+++ b/pages/join.html
@@ -83,7 +83,7 @@ preload: hero-join-us.svg
         <div class="image-list row">
           <div class="col-sm-4 col-lg-3">
             <div class="employee-gradient employee-gradient__img">
-              <img class="image-list__employee-img" src="{{ site.baseurl }}/img/people/shashank-khandelwal.jpg" alt="Shashank Khandelwal">
+              <img class="image-list__employee-img" src="{{ site.baseurl }}/img/people/leslie-garner-franklin.jpg" alt="Leslie Garner Franklin">
             </div>
           </div>
           <div class="join__quote col-sm-8 col-lg-9">
