--- a/pages/join.html
+++ b/pages/join.html
@@ -92,7 +92,7 @@ preload: hero-join-us.svg
               which is what the government needs more of from industry.”
             </p>
 
-            <p class="join-quote__byline">– <b>Shashank Khandelwal,</b> VP of Human Services</p>
+            <p class="join-quote__byline">– <b>Leslie Garner Franklin,</b> VP of Human Services</p>
           </div>
         </div>
 
