--- a/pages/join.html
+++ b/pages/join.html
@@ -83,7 +83,7 @@ preload: hero-join-us.svg
         <div class="image-list row">
           <div class="col-sm-4 col-lg-3">
             <div class="employee-gradient employee-gradient__img">
-              <img class="image-list__employee-img" src="{{ site.baseurl }}/img/people/leslie-garner-franklin.jpg" alt="Leslie Garner Franklin">
+              <img class="image-list__employee-img" src="{{ site.baseurl }}/img/people/karthik-patil.jpg" alt="Karthik Patil">
             </div>
           </div>
           <div class="join__quote col-sm-8 col-lg-9">
@@ -92,7 +92,7 @@ preload: hero-join-us.svg
               which is what the government needs more of from industry.”
             </p>
 
-            <p class="join-quote__byline">– <b>Leslie Garner Franklin,</b> VP of Human Services</p>
+            <p class="join-quote__byline">– <b>Karthik Patil,</b> VP of Defense Services</p>
           </div>
         </div>
 
