begin greenhouse integration

--- a/pages/join.html
+++ b/pages/join.html
@@ -210,7 +210,7 @@ preload: hero-join-us.svg
         </div>
       </div>
 
-      {% include open_positions.html %}
+      <div id="grnhse_app"></div>
 
       <div id="interviewing">
         <h2 id="interview-process">Interview process</h2>
