--- a/pages/join.html
+++ b/pages/join.html
@@ -209,10 +209,13 @@ preload: hero-join-us.svg
           </div>
         </div>
       </div>
+    <h2 id="open-positions">Open positions</h2>
 
-      <div id="grnhse_app"></div>
+    <p class="text-intro">Below are the roles that we're actively hiring for:</p>
 
-      <div id="interviewing">
+    <div id="grnhse_app"></div>
+
+    <div id="interviewing">
         <h2 id="interview-process">Interview process</h2>
         <p class="text-intro">If you apply for a position, here’s what you can expect in terms of the process:</p>
 
