more greenhouse styling tweaks

--- a/pages/join.html
+++ b/pages/join.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Join us
+load_greenhouse_script: true
 description: Join a diverse and talented team at Skylight. Learn about opportunities in civic technology across research, design, product, engineering, and more.
 permalink: /careers/join/
 redirect_from: /join/
@@ -209,10 +210,7 @@ preload: hero-join-us.svg
           </div>
         </div>
       </div>
-    <h2 id="open-positions">Open positions</h2>
-
-    <p class="text-intro">Below are the roles that we're actively hiring for:</p>
-
+      
     <div id="grnhse_app"></div>
 
     <div id="interviewing">
