--- a/pages/join.html
+++ b/pages/join.html
@@ -223,6 +223,16 @@ preload: hero-join-us.svg
           we look for a growth mindset, excellent communication skills, ability to deal with ambiguity, and capability to adapt. 
           You won’t be penalized for taking time to think before responding, asking to repeat a question, or correcting yourself. 
           With that in mind, please note:
+          <div class="row mt-4 mt-sm-5 text">
+        <div class="col-sm-6">
+          <h3>Ways we can help you:</h3>
+          <ul class="">
+            <li>Create a product that your users love</li>
+            <li>De-risk the modernization of your legacy systems</li>
+            <li>Make your data open and accessible to the public</li>
+          </ul>
+        </div>
+        <div class="col-sm-6">
           <ul class="">
             <li>All of our screenings and interviews occur via videoconference.</li>
             <li>A Google Meet or Zoom link will be included in your calendar invitation.</li>
