join us page styling

--- a/pages/join.html
+++ b/pages/join.html
@@ -340,7 +340,7 @@ works." color = "green" image = "hero-join-us.svg" %}
       </div>
 
       <div class="callout--tip left-justified-list">
-        <h5 class="callout--tip__title">What to expect, by role:</h5>
+        <p class="callout_title">What to expect, by role:</p>
         <ul class="">
           <li>
             <p class="callout_subtitle">Research or design</p>
