--- a/pages/join.html
+++ b/pages/join.html
@@ -379,6 +379,7 @@ works." color = "green" image = "hero-join-us.svg" %}
             If you’re a good fit for our open roles, we’ll schedule you for a behavioral interview. 
         </p>
       
+      <div class="interview-explanation">
           <h4>3. Behavioral interview</h4>
           <p>
             The behavioral interview lasts for one hour. The intent is to assess whether or not you’d be a good fit for Skylight’s values. 
@@ -402,6 +403,8 @@ works." color = "green" image = "hero-join-us.svg" %}
             If all the interviews go well, you’ll receive a preliminary offer followed by an official offer, 
             which will include an agreed-upon start date. Congratulations!
           </p>
+        </div>
+      </div>
       
         <div class="interview-explanation">
           <h3>Internships and apprenticeships</h3>
