--- a/pages/join.html
+++ b/pages/join.html
@@ -432,6 +432,7 @@ works." color = "green" image = "hero-join-us.svg" %}
             Finally, if you’re selected for an internship or apprenticeship, you’ll receive an offer! 
             We’ll decide on a start date based on when we are able to onboard a class of interns or apprentices together. 
           </p>
+       </section>
   </div>
 </div>
 
