--- a/pages/join.html
+++ b/pages/join.html
@@ -430,7 +430,7 @@ works." color = "green" image = "hero-join-us.svg" %}
           </p>
           <p>
             Finally, if you’re selected for an internship or apprenticeship, you’ll receive an offer! 
-            We’ll decide on a start date based on when we are able to onboard a class of interns or apprentices together. 
+            We’ll decide on a start date based on when we're able to onboard a class of interns or apprentices together. 
           </p>
        </section>
   </div>
