--- a/pages/join.html
+++ b/pages/join.html
@@ -309,8 +309,8 @@ works." color = "green" image = "hero-join-us.svg" %}
             </li>
             <li>
               We're an equal opportunity employer. If you need reasonable
-              accommodations for a disability, please reach out to
-              recruiting@skylight.digital with your accommodation request.
+              accommodations for a disability, please <a href="mailto:recruiting@skylight.digital">reach out to us</a> 
+              with your accommodation request.
             </li>
           </ul>
           We use the interview process to not only evaluate whether you’re a
