fix download and link styling

--- a/pages/join.html
+++ b/pages/join.html
@@ -283,7 +283,7 @@ works." color = "green" image = "hero-join-us.svg" %}
           the process:
         </p>
 
-        <div class="interview-explanation left-justified-list">
+        <div class="interview-explanation left-justified-list text">
           <h3>Interview basics</h3>
           <p>
             We strongly prioritize the human element of the workplace, so the
@@ -315,7 +315,7 @@ works." color = "green" image = "hero-join-us.svg" %}
           </ul>
           We use the interview process to not only evaluate whether you’re a
           good fit for Skylight, but also to map you to a
-          <a href="/careers/career-pathways/">career level</a>, which ultimately
+          <a  href="/careers/career-pathways/">career level</a>, which ultimately
           determines your salary range.
         </div>
 
