--- a/pages/join.html
+++ b/pages/join.html
@@ -358,9 +358,14 @@ works." color = "green" image = "hero-join-us.svg" %}
         <p class="callout_title">What to expect, by role:</p>
         <ul class="">
           <li>
-            <p class="callout_subtitle">Research or design</p>
+            <p class="callout_subtitle">Researcher or designer</p>
             45–60 minutes presenting one or two examples from your portfolio,
             and 20–30 minutes answering questions
+          </li>
+           <li>
+            <p class="callout_subtitle">Product manager</p>
+            Meeting with other product experts who’ll be asking questions about your product management experience, 
+            including products that you’ve shipped and specific approaches or practices that you use
           </li>
           <li>
             <p class="callout_subtitle">Software engineer or DevOps engineer</p>
