--- a/pages/join.html
+++ b/pages/join.html
@@ -373,7 +373,8 @@ works." color = "green" image = "hero-join-us.svg" %}
           </li>
           <li>
             <p class="callout_subtitle">Data scientist or data engineer</p>
-            Answering questions about a variety of data engineering topics
+            60–90 minutes conversation about your experience and knowledge of interacting with data at all stages of its lifecycle, 
+            as well as some questions that test your experience with Python, SQL, and/or data analytics (no whiteboard coding questions)
           </li>
           <li>
             <p class="callout_subtitle">Business strategy and operations</p>
