--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -15,7 +15,7 @@ pagination:
   per_page: 10000
   collection: projects
   sort_field: "order"
-  sort_reverse: true
+  sort_reverse: false
 ---
 
 {% capture header_content %}
