--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -64,6 +64,7 @@ preload: hero-contracting.svg
     <ul>
       <li>GSA Multiple Award Schedule (contract #: 47QTCA18D00D0, SIN #: 54151S) — accessible to all federal, state, and local governments</li>
       <li>Multiple SBIR/STTR contract vehicles eligible for sole-source awards and accessible to any federal agency — <a href="/assets/Skylight-SBIR-STTR-Procurement-Guide.pdf">check out our brief guide</a> on how to leverage these amazing vehicles to engage with us quickly and easily</li>
+      <li>USAF ABMS (contract #: FA861222DB028) — Category 0 (Digital Architecture, Standards, Analysis and Concepts) and Category 5 (Apps)</li>
       <li>California Agile Vendor Pool<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
       <li>DHS Services for Enabling Agile Delivery (SEAD)<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
       <li>CMS Enterprise Agile Transformation Services (EATS)<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
@@ -72,7 +73,7 @@ preload: hero-contracting.svg
 
     <h2>Company data</h2>
     <ul>
-      <li>DUNS: 080202677</li>
+      <li>SAM Unique Entity ID: F1QZXZNLZJF2</li>
       <li>CAGE Code: 7QNG6</li>
       <li>NAICS Codes: 56905, 541511, 541611, 541519, 611430, 541715</li>
       <li>SIC Codes: 7371, 8742</li>
