--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -189,7 +189,7 @@ image_description: Skylight toolkits banner showing a collection of different to
       organized groups within Skylight who are passionate about developing and
       sharing our expertise with the world. We currently have eight Communities
       of Practice. These include: Research & Design, Product & Delivery,
-      Engineering, Data, Procurement, Transformation, Accessibility, and
+      Engineering, Data, Transformation & Procurement, Accessibility, and
       Internet of Things.
     </p>
   </div>
