--- a/pages/join.html
+++ b/pages/join.html
@@ -392,7 +392,7 @@ works." color = "green" image = "hero-join-us.svg" %}
       <div class="interview-explanation">
           <h4>3. Behavioral interview</h4>
           <p>
-            The behavioral interview lasts for one hour. The intent is to assess whether or not you’d be a good fit for Skylight’s values. 
+            The behavioral interview lasts for one hour. The intent is to assess whether or not you’d be a good fit for Skylight’s values and standards of behavior. 
             You’ll meet with two interviewers who will ask questions about how you communicate, collaborate, and how you approach challenging situations at work. 
             We’ll leave you with 10–15 minutes at the end for your questions. 
           </p>
