--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -64,8 +64,10 @@ preload: hero-contracting.svg
     <ul>
       <li>GSA Multiple Award Schedule (contract #: 47QTCA18D00D0, SIN #: 54151S) — accessible to all federal, state, and local governments</li>
       <li>Multiple SBIR/STTR contract vehicles eligible for sole-source awards and accessible to any federal agency — <a href="/assets/Skylight-SBIR-STTR-Procurement-Guide.pdf">check out our brief guide</a> on how to leverage these amazing vehicles to engage with us quickly and easily</li>
+      <li>CDC Pandemic Ready Interoperability Modernization Effort (PRIME) and Data Modernization Initiative (DMI) BPA (contract #: 47QFSA21K0123) — digital and data services in support of the CDC's public health infrastructure modernization initiatives</li>
+      <li>USAF BESPIN Design Studio SBIR Phase III IDIQ (contract #: FA877122D0003) — research, design, and development services in support the USAF's and defense community's digital transformation initiatives </li>
       <li>USAF ABMS IDIQ (contract #: FA861222DB028) — Category 0 (Digital Architecture, Standards, Analysis and Concepts) and Category 5 (Apps)</li>
-      <li>CMS Medicare Payment Systems Modernization (MPSM)<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
+      <li>CMS Medicare Payment Systems Modernization (MPSM) — research, design, and engineering services in support modernizing the MPSM systems ecosystem<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
     </ul>
 
     <h2>Company data</h2>
