--- a/pages/join.html
+++ b/pages/join.html
@@ -87,20 +87,19 @@ works." color = "green" image = "hero-join-us.svg" %}
             <div class="employee-gradient employee-gradient__img">
               <img
                 class="image-list__employee-img"
-                src="{{ site.baseurl }}/img/people/charlye-tran.jpg"
-                alt="Charlye Tran"
+                src="{{ site.baseurl }}/img/people/tiffany-nieh.jpg"
+                alt="Tiffany Nieh"
               />
             </div>
           </div>
           <div class="join__quote col-sm-8 col-lg-9">
             <p class="quote-text font-size-large">
-              “I love being able to work somewhere that empowers you to hone in
-              on solving the right problems in an increasingly complex
-              environment, alongside some of the most inspired and talented
-              folks in the industry.”
+              “The work we do at Skylight is meaningful, 
+              and I value the autonomy that Skylight provides, 
+              which allows space for me to create products that both clients and users love.”
             </p>
             <p class="join-quote__byline">
-              – <b>Charlye Tran,</b> Service Designer
+              – <b>Tiffany Nieh,</b> Product Designer
             </p>
           </div>
         </div>
