--- a/pages/join.html
+++ b/pages/join.html
@@ -194,8 +194,8 @@ works." color = "green" image = "hero-join-us.svg" %}
             {% include icons/join/parental-leave.svg %}
             <h3>Parental leave</h3>
             <p>
-              We offer a minimum of 9 weeks paid time off for all eligible new
-              birth, adoption, or foster parents.
+              We offer up to 12 weeks paid time off for all eligible 
+              new birth, adoption, or foster parents. 
             </p>
           </div>
 
@@ -203,9 +203,8 @@ works." color = "green" image = "hero-join-us.svg" %}
             {% include icons/join/time-off.svg %}
             <h3>Time off</h3>
             <p>
-              We offer 31 paid days off per year: 15 vacation days, 11 federal
-              holidays, and 5 floating holidays. We also offer a flexible sick
-              leave policy.
+              We offer 31 paid days off per year: 20 vacation days and 11 federal
+              holidays. We also offer a flexible sick leave policy.
             </p>
           </div>
 
