--- a/pages/services.html
+++ b/pages/services.html
@@ -329,7 +329,7 @@ preload: hero-services.svg
               >
             </li>
             <li>
-              Grew U.S. Air Force personnel into skilled designers and engineers
+              Grew U.S. Air Force personnel into skilled technology practitioners
             </li>
           </ul>
         </div>
