--- a/pages/services.html
+++ b/pages/services.html
@@ -59,21 +59,19 @@ preload: hero-services.svg
           <h3>How we’ve helped others:</h3>
           <ul>
             <li>
-              <a href="/work/experience/ct-ece-reporter/"
-                >Modernized data collection systems for improving early
-                childhood outcomes in Connecticut</a
-              >
-            </li>
-            <li>
-              <a href="/work/experience/va-diffusion-marketplace/"
-                >Created a knowledge platform for improving how the Veterans
-                Affairs delivers healthcare</a
+              <a href="/work/experience/cdc-simplereport/"
+                >Modernized COVID-19 testing and reporting in non-traditional healthcare settings</a
               >
             </li>
             <li>
               <a href="/work/experience/usaf-gearfit/"
                 >Built an application for improving the U.S. Air Force’s aircrew
                 safety and equipment operations</a
+              >
+            </li>
+            <li>
+              <a href="/work/experience/cdc-public-health-data-infrastructure/"
+                >Built a response-ready public health data system</a
               >
             </li>
           </ul>
@@ -119,6 +117,11 @@ preload: hero-services.svg
           <h3>How we’ve helped others:</h3>
           <ul>
             <li>
+              <a href="/work/experience/goc-nextgen-hr-and-pay-system-agile-procurement/"
+                >Helped turn around a disastrous system rollout through agile procurement</a
+              >
+            </li>
+            <li>
               <a href="/work/experience/agile-acquisition-framework/"
                 >Made procurements more agile at all levels of government</a
               >
@@ -126,12 +129,6 @@ preload: hero-services.svg
             <li>
               <a href="/work/experience/agile-delivery-services-marketplace/"
                 >Streamlined how multiple agencies procure software</a
-              >
-            </li>
-            <li>
-              <a href="/work/experience/dol-legacy-system-modernization/"
-                >Embedded technical brains to de-risk a critical software
-                acquisition for the U.S. Department of Labor</a
               >
             </li>
           </ul>
