--- a/pages/services.html
+++ b/pages/services.html
@@ -71,7 +71,7 @@ preload: hero-services.svg
             </li>
             <li>
               <a href="/work/experience/cdc-public-health-data-infrastructure/"
-                >Built a response-ready public health data system</a
+                >Built a response-ready public health data system for the CDC</a
               >
             </li>
           </ul>
