--- a/pages/services.html
+++ b/pages/services.html
@@ -118,7 +118,7 @@ preload: hero-services.svg
           <ul>
             <li>
               <a href="/work/experience/goc-nextgen-hr-and-pay-system-agile-procurement/"
-                >Helped turn around a disastrous system rollout through agile procurement</a
+                >Helped turn around a disastrous system rollout for the Government of Canada through agile procurement</a
               >
             </li>
             <li>
