--- a/pages/join.html
+++ b/pages/join.html
@@ -257,10 +257,8 @@ works." color = "green" image = "hero-join-us.svg" %}
           </div>
         </div>
       </div>
-      <h2 id="open-positions">Open positions</h2>
-      <p class="text-intro">Below are the roles that we're actively hiring for:</p>
-
-    <div id="grnhse_app"></div>
+  
+      {% include open_positions.html%}
 
     <div id="interviewing">
 
