--- a/pages/services.html
+++ b/pages/services.html
@@ -326,7 +326,9 @@ preload: hero-services.svg
               >
             </li>
             <li>
-              Grew U.S. Air Force personnel into skilled technology practitioners
+              <a href="/work/experience/usaf-bespin-enablement/"
+                >Grew U.S. Air Force personnel into skilled technology practitioners</a
+              >
             </li>
           </ul>
         </div>
