--- a/pages/services.html
+++ b/pages/services.html
@@ -182,13 +182,13 @@ preload: hero-services.svg
               >
             </li>
             <li>
-              Supported the U.S. Air Force in building a large-scale digital
-              solutions center
+              <a href="/work/experience/usaf-bespin-transformation-support/"
+                >Supported the U.S. Air Force in building out the BESPIN software factory</a
+              >
             </li>
             <li>
-              <a href="/work/experience/tsa-cloud-adoption/"
-                >Accelerated the Transportation Security Administration’s
-                adoption of the cloud</a
+              <a href="/work/experience/cms-macbis-transformation/"
+                >Helped transform how the Center for Medicaid and CHIP Services manages its portfolio of systems</a
               >
             </li>
           </ul>
