--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -34,9 +34,8 @@ class_2_spots:
           <p class="hero-content text-shadow">
             Learn the skills required to master the art of digital acquisition
             through our expert-led, 6-month, part-time course. Upon completion,
-            you’ll earn the Federal Acquisition Certification in Contracting
-            Core-Plus Specialization in Digital Services (FAC-C-DS) and up to 80
-            Continuous Learning Points.
+            you’ll earn the Federal Acquisition Certification in Contracting–Digital 
+            Services Credential (FAC-C-DS) and up to 80 Continuous Learning Points.
           </p>
           <div class="hero-btn-group mt-2">
             <div class="hero-btn-wrapper pr-1">
@@ -115,8 +114,8 @@ class_2_spots:
             <p>
               Master the concepts, tools, and techniques you need to excel at
               digital acquisition through our expert-led, dynamic learning
-              environment. Earn the Federal Acquisition Certification in
-              Contracting Core-Plus Specialization in Digital Services (<a
+              environment. Earn the Federal Acquisition Certification in 
+              Contracting–Digital Services Credential (<a
                 href="https://www.fai.gov/announcements/new-fac-specialization-focuses-digital-services"
                 >FAC-C-DS</a
               >).
@@ -398,8 +397,7 @@ class_2_spots:
           %} {% capture accordion_body %}
           <ul>
             <li>
-              Federal Acquisition Certification in Contracting Core-Plus
-              Specialization in Digital Services (<a
+              Federal Acquisition Certification in Contracting–Digital Services Credential (<a
                 href="https://www.fai.gov/announcements/new-fac-specialization-focuses-digital-services"
                 >FAC-C-DS</a
               >).
