--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -252,7 +252,7 @@ preload: hero-service-design.svg
           As long as your support requirements “extend or derive” from the
           original scope of work under our STTR Phase II contract, you can
           leverage it to issue a direct (or non-competitive) Phase III award to
-          Skylight — without any dollar, time, or size standard restrictions.
+          Skylight — without any dollar, time, size standard, or workshare restrictions.
         </p>
         <p>
           For more information on how to work with Skylight through the
