Add new page and update code of conduct

--- a/pages/policies.html
+++ b/pages/policies.html
@@ -30,6 +30,7 @@ permalink: /company/policies/
         <li><a href="/company/policies/open-source/">Open Source Policy</a></li>
         <li><a href="/company/policies/vulnerability-disclosure/">Vulnerability Disclosure Policy</a></li>
         <li><a href="/company/policies/code-of-conduct/">Code of Conduct Policy</a></li>
+        <li><a href="/company/policies/intentional-communications/">Intentonal Communications Policy</a></li>
       </ul>
     </div>
   </div>
