--- a/pages/about.html
+++ b/pages/about.html
@@ -109,9 +109,8 @@ preload: hero-about-us.svg
 
       <p>
         Feel free to reach out directly to one of our leaders —
-        <a href="mailto:chris@skylight.digital">Chris Cairns</a>,
-        <a href="mailto:jamie@skylight.digital">Jamie Song</a>,
-        or <a href="mailto:nicole@skylight.digital">Nicole Campbell</a>.
+        <a href="mailto:chris@skylight.digital">Chris Cairns</a> or
+        <a href="mailto:nicole@skylight.digital">Nicole Campbell</a>.
       </p>
 
       <p>
