--- a/pages/join.html
+++ b/pages/join.html
@@ -378,6 +378,11 @@ works." color = "green" image = "hero-join-us.svg" %}
             as well as some questions that test your experience with Python, SQL, and/or data analytics (no whiteboard coding questions)
           </li>
           <li>
+            <p class="callout_subtitle">Engagement manager</p>
+            Meeting with other engagement management experts who'll be asking questions about your experience 
+            leading and managing cross-functional delivery teams within a client service environment
+          </li>
+          <li>
             <p class="callout_subtitle">Business strategy and operations</p>
             Meeting with people who may not have experience in your discipline,
             but whose work will closely intersect with yours
