--- a/pages/join.html
+++ b/pages/join.html
@@ -380,7 +380,7 @@ works." color = "green" image = "hero-join-us.svg" %}
           <li>
             <p class="callout_subtitle">Engagement manager</p>
             Meeting with other engagement management experts who'll be asking questions about your experience 
-            leading and managing cross-functional delivery teams within a client service environment
+            leading and managing agile, cross-functional delivery teams within a client service environment
           </li>
           <li>
             <p class="callout_subtitle">Business strategy and operations</p>
