--- a/pages/join.html
+++ b/pages/join.html
@@ -374,7 +374,7 @@ works." color = "green" image = "hero-join-us.svg" %}
           </li>
           <li>
             <p class="callout_subtitle">Data scientist or data engineer</p>
-            60–90 minutes conversation about your experience and knowledge of interacting with data at all stages of its lifecycle, 
+            60 minutes or more conversation about your experience and knowledge of interacting with data at all stages of its lifecycle, 
             as well as some questions that test your experience with Python, SQL, and/or data analytics (no whiteboard coding questions)
           </li>
           <li>
