--- a/pages/talks/index.html
+++ b/pages/talks/index.html
@@ -10,6 +10,7 @@ pagination:
   sort_field: "date"
   sort_reverse: true
   per_page: 9
+  category: non_featured
 ---
 
 {% include paginated_pages.html %}
