fix bottom margin

--- a/pages/solutions/gearfit.html
+++ b/pages/solutions/gearfit.html
@@ -248,7 +248,7 @@ class_2_spots:
     </div>
   </div>
 
-  <div class="mt-6 bg-purple-lightest py-6">
+  <div class="mt-6 bg-purple-lightest py-6 mb--4">
     <div class="grid-container prose">
       <div class="row">
         <div class="col-md-12">
